# polynom-interpolation

./: Aufgabestellung.txt  README.md  code.py  crashout_log.txt  documentation.md  documentation.txt  emin.py  horner.py  requirements.txt  ui.py  vany_newton.py
(Manuel)NEUER_VERSUCH/: hermite.py  io.py  lagrange.py  main.py  newton.py  polynom.py
(Manuel)NEUER_VERSUCH/tests/: test.py
GitSachen/: README.md
Manuel_NEUER_VERSUCH/: hermite.py  interpolation.py  io_input.py  lagrange.py  main.py  newton.py  polynom.py  requirements.txt  test.py  test_polynom.py  userInterface.py
Manuel_NEUER_VERSUCH/tests/: test.py
Textdateien_Ordner(+gitignore)/: Aufgabestellung.txt  HowToPython.txt  crashout_log.txt
alte(r)zeug/: code.py  emin.py  lib.py  ui.py  ui_test_taschenrechner.py
see-elle-eye/: README.md  pyproject.toml
see-elle-eye/src/see_elle_eye/: magic.py  spellbook.py
