[project]
name = "see-elle-eye"
version = "0.1.0"
description = ""
authors = [
    {name = "elenamii",email = "elenagholami@gmx.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.3.0,<9.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]

[tool.poetry]
packages = [{include = "see_elle_eye", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
see-elle-eye = "see_elle_eye.spellbook:see_elle_eye"